Bug 1684567 - don't round unspecified image dimensions to integers r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D100562